# kamikaze

./: .gitignore  CMakeLists.txt  GLSLShader.cc  GLSLShader.cpp  GLSLShader.h  Makefile  README.md  camera.h  cppcheck.sh  cube.cc  global.pri  grid.cc  hi_no_kirin.pro  kamikaze.pro  main.cc  main.cpp  mainwindow.cc  mainwindow.h  mainwindow.ui  timelinewidget.cc  timelinewidget.h  utils.h  viewer.cc  viewer.h  volume.cc  volume.cpp  volume.h  volumesplatter.cpp  volumesplatter.h
app/: CMakeLists.txt  app.pro  main.cc
cmake/Modules/: FindEgo.cmake  FindFileSystem.cmake  FindKamikaze.cmake  FindKangao.cmake  FindTestUnitaire.cmake
core/: CMakeLists.txt  brush.h  camera.cc  camera.h  context.cc  context.h  core.pro  dynamiclibrary.cc  filesystem.cc  filesystem.h  grid.cc  grid.h  kamikaze_main.cc  kamikaze_main.h  manipulator.cc  manipulator.h  object.cc  object.h  object_commands.cc  object_ops.cc  object_ops.h  renderbuffer.cc  renderbuffer.h  sauvegarde.cc  sauvegarde.h  scene.cc  scene.h  simulation.cc  simulation.h  task.cc  task.h  transformable.cc  transformable.h  undo.cc  undo.h  view3d_commands.cc  viewer.cc  viewer.h
core/commandes/: commandes_graphes.cc  commandes_graphes.h  commandes_objet.cc  commandes_objet.h  commandes_projet.cc  commandes_projet.h  commandes_scene.cc  commandes_scene.h
core/graphs/: depsgraph.cc  depsgraph.h  graph_dumper.cc  graph_dumper.h  graph_tools.h  object_graph.cc  object_graph.h  object_nodes.cc  object_nodes.h  scene_node.cc  scene_node.h
core/interne/: tinyxml2.cc  tinyxml2.h
core/nodes/: graph.cc  graph.h  graph_dumper.cc  graph_dumper.h  nodes.cc  nodes.h
core/operateurs/: operateurs_physiques.cc  operateurs_physiques.h  operateurs_standards.cc
core/shaders/: flat_shader.frag  flat_shader.vert  object.frag  object.vert  tree_topology.frag  tree_topology.vert  volume.frag  volume.vert
core/styles/: main.qss
extension/: extension.pro  levelset.cc  levelset.h  main.cc  sculpt.cc  util_openvdb.cc  util_openvdb.h  volume.cc  volume.h  volumebase.cc  volumebase.h
objects/: context.cc  context.h  cube.cc  cube.h  dynamiclibrary.h  factory.h  grid.cc  grid.h  levelset.cc  levelset.h  object.cc  object.h  object_ops.cc  object_ops.h  objects.pro  treetopology.cc  treetopology.h  undo.cc  undo.h  volume.cc  volume.h  volumebase.cc  volumebase.h
render/: GLSLShader.cc  GLSLShader.h  GPUBuffer.cc  GPUBuffer.h  GPUProgram.cc  GPUProgram.h  GPUShader.cc  GPUShader.h  GPUTexture.cc  GPUTexture.h  camera.cc  camera.h  render.pro  scene.cc  scene.h  viewer.cc  viewer.h
render/gpu/: GPUBuffer.cc  GPUBuffer.h  GPUProgram.cc  GPUProgram.h  GPUTexture.cc  GPUTexture.h
render/shaders/: flat_shader.frag  volume.vert
sculpt/: brush.cc  brush.h  sculpt.cc  sculpt.h  sculpt.pro
sdk/: CMakeLists.txt  any.cc  any.h  attribute.cc  attribute.h  bruit.cc  bruit.h  context.cc  context.h  cube.cc  cube.h  factory.h  geomlists.cc  geomlists.h  mesh.cc  mesh.h  models.h  modifiers.cc  modifiers.h  nodes.cc  nodes.h  noeud.cc  noeud.h  noise.cc  noise.h  object.cc  object.h  operateur.cc  operateur.h  param_widgets.cc  param_widgets.h  paramfactory.cc  paramfactory.h  persona.cc  persona.h  prim_points.cc  prim_points.h  primitive.cc  primitive.h  renderbuffer.cc  (+7 more)
sdk/géométrie/: maillage.cc  maillage.h
sdk/intern/: custom_widgets.cc  custom_widgets.h  param_widgets.cc  param_widgets.h
sdk/outils/: chaîne_caractère.h  géométrie.cc  géométrie.h  interpolation.h  mathématiques.h  parallélisme.h  rendu.h
shader/: flat_shader.frag  flat_shader.vert  object.frag  object.vert  texture_slicer.frag  texture_slicer.vert  tree_topo.frag  tree_topo.vert
smoke/: advection.h  forces.cc  forces.h  globals.h  pressure.cc  smoke.pro  smokesimulation.cc  smokesimulation.h  types.h  util_smoke.h
tests/: CMakeLists.txt  main.cc
ui/: CMakeLists.txt  base_editeur.cc  base_editeur.h  editeur_arborescence.cc  editeur_arborescence.h  editeur_canevas.cc  editeur_canevas.h  editeur_graphe.cc  editeur_graphe.h  editeur_ligne_temps.cc  editeur_ligne_temps.h  editeur_proprietes.cc  editeur_proprietes.h  fenetre_principale.cc  fenetre_principale.h  levelsetdialog.cc  levelsetdialog.h  levelsetdialog.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  modifieritem.cc  modifieritem.h  outliner_widget.cc  outliner_widget.h  paramcallback.cc  paramcallback.h  paramfactory.cc  paramfactory.h  properties_widget.cc  properties_widget.h  repondant_commande.cc  repondant_commande.h  timeline_widget.cc  timeline_widget.h  timelinewidget.cc  timelinewidget.h  ui.pro  utils_ui.cc  utils_ui.h  (+6 more)
ui/intern/: custom_widgets.cc  custom_widgets.h  param_widgets.cc  param_widgets.h
ui/nodes/: node_compound.cc  node_compound.h  node_connection.cc  node_connection.h  node_constants.h  node_editorwidget.cc  node_editorwidget.h  node_node.cc  node_node.h  node_port.cc  node_port.h  node_porttype.cc  node_porttype.h  node_scene.h  vue_editeur_noeud.cc  vue_editeur_noeud.h
ui/scripts_danjo/: menu_debogage.jo  menu_fichier.jo  operateur_commutateur.jo  operateur_creation_grille.jo  operateur_creation_nuage_point.jo  operateur_creation_torus.jo  operateur_creation_tube.jo  operateur_dispersion_points.jo  proprietes_objet.jo
ui/scripts_kangao/: disposition_ligne_temps.kangao  menu_editeur_noeud.kangao  menu_edition.kangao  menu_objet.kangao  menu_prereglage.kangao  operateur_bruit.kangao  operateur_couleur.kangao  operateur_creation_boite.kangao  operateur_creation_cercle.kangao  operateur_creation_cone.kangao  operateur_creation_courbes.kangao  operateur_creation_grille.kangao  operateur_creation_icosphere.kangao  operateur_creation_nuage_point.kangao  operateur_creation_torus.kangao  operateur_normal.kangao  operateur_randomise_attribut.kangao  operateur_suppression_attribut.kangao  operateur_transformation.kangao  proprietes_objet.kangao
util/: CMakeLists.txt  util.pro  util_input.h  util_memory.h  util_opengl.cc  util_opengl.h  util_openvdb.cc  util_openvdb.h  util_openvdb_process.h  util_render.h  util_string.h  utils.cc  utils.h  utils_glm.h
